--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,18 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <distributionManagement>
+    <repository>
+        <id>central</id>
+        <name>plugins-releases</name>
+        <url>http://ec2-13-126-232-131.ap-south-1.compute.amazonaws.com:8081//artifactory/plugins-release-local</url>
+    </repository>
+    <snapshotRepository>
+        <id>snapshots</id>
+        <name>plugins-snapshot</name>
+        <url>http://ec2-13-126-232-131.ap-south-1.compute.amazonaws.com:8081//artifactory/plugins-snapshot-local</url>
+    </snapshotRepository>
+</distributionManagement>
   <build>
     <finalName>JenkinsWar</finalName>
   </build>
