--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,12 @@
     <repository>
         <id>central</id>
         <name>plugins-releases</name>
-        <url>http://ec2-13-126-232-131.ap-south-1.compute.amazonaws.com:8081/artifactory/plugins-release-local</url>
+        <url>http:ip-172-31-27-226.ap-south-1.compute.internal:8081/artifactory/plugins-release-local</url>
     </repository>
     <snapshotRepository>
         <id>snapshots</id>
         <name>plugins-snapshot</name>
-        <url>http://ec2-13-126-232-131.ap-south-1.compute.amazonaws.com:8081/artifactory/plugins-snapshot-local</url>
+        <url>http:ip-172-31-27-226.ap-south-1.compute.internal:8081/artifactory/plugins-snapshot-local</url>
     </snapshotRepository>
 </distributionManagement>
   <build>
