--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>JenkinsWar1</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>Webapp</name>
+  <name>webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
